--- a/ansible-lab/app01/Vagrantfile
+++ b/ansible-lab/app01/Vagrantfile
@@ -1,5 +1,6 @@
 
 Vagrant.configure("2") do |config|
+  
   # configuração no nome (hostname) da vm da aplicação - app01
   config.vm.hostname = "app01"
 
@@ -11,6 +12,9 @@ Vagrant.configure("2") do |config|
 
   # configuração do ip local da vm
   config.vm.network "private_network", ip: "192.168.56.3"
+
+  # mapeamento dos comandos bash para instalação configuração de relacao de confiança entre 
+  config.vm.provision "shell", path: "provision.sh"
 
   # configuração para habilitação do plugin vbox para integrar com o vagrant
   config.vbguest.auto_update = false
