--- a/ansible-lab/db01/Vagrantfile
+++ b/ansible-lab/db01/Vagrantfile
@@ -13,6 +13,9 @@ Vagrant.configure("2") do |config|
   # mapeamento de portas do banco - portas padrão para o mysql
   config.vm.network "forwarded_port", guest: 3306, host: 3306
 
+  # mapeamento dos comandos bash para instalação configuração de relacao de confiança entre 
+  config.vm.provision "shell", path: "provision.sh"
+
   # configuração para habilitação do plugin vbox para integrar com o vagrant
   config.vbguest.auto_update = false
   config.vbguest.installer_options = { allow_kernel_upgrade: true }
