--- a/ansible-lab/control-node/Vagrantfile
+++ b/ansible-lab/control-node/Vagrantfile
@@ -10,7 +10,7 @@ Vagrant.configure("2") do |config|
   # configuração do ip local da vm
   config.vm.network "private_network", ip: "192.168.56.2"
 
-  # mapeamento de portas da aplicação que ira rodar em http
+  # mapeamento de pasta que será compartilhada via nfs
   config.vm.synced_folder ".","/vagrant", type: "nfs"
     
   # mapeamento dos comandos bash para instalação do ansible no control node
