--- a/ansible-lab/control-node/playbooks/db.yaml
+++ b/ansible-lab/control-node/playbooks/db.yaml
@@ -1,19 +1,22 @@
 ---
 - name: Configurar servidor de banco de dados
-  host: db01
+  hosts: db01
 
   user: vagrant
   become: yes
   vars_files:
-    - vars/main.yml
+    - vars/main.yaml
   vars:
     - dbname: "db01"
     - dbusername: "root"
     - dbpassword: "password"
   tasks:
-    -name: Configurar o hosts lab ansible
-      lineinfile: lie "{{item}}" path=/etc/hosts
-      with_item: 
+    - name: Configurar o hosts lab ansible
+      lineinfile: 
+        dest: /etc/hosts
+        state: present
+        line: "{{item}}"
+      with_items: 
         - 192.168.56.2 control-node
         - 192.168.56.3 app01
         - 192.168.56.4 db01
