--- a/ansible-lab/control-node/playbooks/app.yaml
+++ b/ansible-lab/control-node/playbooks/app.yaml
@@ -16,15 +16,10 @@
         name: app
         comment: Usuario de aplicação
         uid: 500
-    - name: Donwload do maven
-      get_url:
-        url: https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/3.1.0/apache-maven-3.1.0-bin.tar.gz
-        dest: /opt/apache-maven-3.1.0-bin.tar.gz
-    - name: Unzip do pacote maven
-      ansible.builtin.unarchive:
-        src: /opt/apache-maven-3.1.0-bin.tar.gz
-        dest: /opt/
-        remote_src: yes
+    - name: Instalação do Maven
+      yum:
+        name: maven
+        state: latest
     - name: Instalação do Java
       yum:
         name: java-1.8.0-openjdk
@@ -45,29 +40,22 @@
         dest: /opt/notes
         clone: yes
         force: yes
-    - name: Configurar arquivo pom.xml com repositorios maven central
-      template:
-        src: pom.xml
-        dest: /opt/notes/pom.xml
     - name: Configurar arquivo de propriedades para camada de banco de dados
       template:
         src: application.properties
         dest: /opt/notes/src/main/resources/application.properties
     - name: Gerar pacote da aplicação
-      command: /opt/apache-maven-3.1.0/bin/mvn -f /opt/notes/pom.xml package
+      command: mvn -f /opt/notes/pom.xml package
       become_user: app
     - name: Registrar versao atual do pacote
       shell:
-        cmd: /opt/apache-maven-3.1.0/bin/mvn org.apache.maven.plugins:maven-help-plugin:2.1.1:evaluate -Dexpression=project.version | grep -v '\['
+        cmd: mvn org.apache.maven.plugins:maven-help-plugin:2.1.1:evaluate -Dexpression=project.version | grep -v '\['
         chdir: /opt/notes/
       register: app_version
     - name: Configurar serviço do Systemd
       template:
         src: etc/systemd/system/notes.service
         dest: /etc/systemd/system/notes.service
-        owner: root
-        group: root
-        mode: '0600'
       notify: reload daemon
     - name: Iniciar serviço notes
       service:
