--- a/ansible-lab/control-node/playbooks/app.yaml
+++ b/ansible-lab/control-node/playbooks/app.yaml
@@ -16,10 +16,19 @@
         name: app
         comment: Usuario de aplicação
         uid: 500
+    # - name: Instalação do Maven
+    #   get_url:
+    #     url: https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/3.1.0/apache-maven-3.1.0-bin.tar.gz
+    #     dest: /opt/apache-maven-3.1.0-bin.tar.gz
     - name: Instalação do Maven
       yum:
         name: maven
         state: latest
+    # - name: Descompactar Maven
+    #   ansible.builtin.unarchive:
+    #   src: /opt/apache-maven-3.1.0-bin.tar.gz
+    #   dest: /opt/
+    #   remote_src: yes
     - name: Instalação do Java
       yum:
         name: java-1.8.0-openjdk
@@ -40,16 +49,20 @@
         dest: /opt/notes
         clone: yes
         force: yes
-    - name: Configurar arquivo de propriedades para camada de banco de dados
+    # - name: Configurar arquivo pom.xml
+    #   template:
+    #     src: pom.xml
+    #     dest: /opt/notes/pom.xml
+    - name: configurar arquivo de propriedades
       template:
         src: application.properties
         dest: /opt/notes/src/main/resources/application.properties
     - name: Gerar pacote da aplicação
-      command: mvn -f /opt/notes/pom.xml package
+      command: /opt/apache-maven-3.1.0/bin/mvn -f /opt/notes/pom.xml package
       become_user: app
     - name: Registrar versao atual do pacote
       shell:
-        cmd: mvn org.apache.maven.plugins:maven-help-plugin:2.1.1:evaluate -Dexpression=project.version | grep -v '\['
+        cmd: /opt/apache-maven-3.1.0/bin/mvn org.apache.maven.plugins:maven-help-plugin:2.1.1:evaluate -Dexpression=project.version | grep -v '\['
         chdir: /opt/notes/
       register: app_version
     - name: Configurar serviço do Systemd
