--- a/ansible-lab/control-node/playbooks/db.yaml
+++ b/ansible-lab/control-node/playbooks/db.yaml
@@ -7,8 +7,8 @@
   vars_files:
     - vars/main.yaml
   vars:
-    - dbname: "db01"
-    - dbusername: "root"
+    - dbname: "notes"
+    - dbusername: "notesapp"
     - dbpassword: "password"
   roles:
     - configuracao-default-so
