--- a/ansible-lab/control-node/playbooks/templates/etc/systemd/system/notes.service
+++ b/ansible-lab/control-node/playbooks/templates/etc/systemd/system/notes.service
@@ -2,12 +2,11 @@
 Description=notes
 After=network.target
 
-
 [Service]
 User=app
 WorkingDirectory=/opt/notes
-ExecStart=/usr/bin/java -jar -Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom /opt/notes/target/easy-notes-{{app_version.stdout}}.jar
-SyslogIdentifier=notes-%i
+ExecStart=/usr/bin/java -jar /opt/notes/target/easy-notes-{{app_version.stdout}}.jar
+SyslogIdentifier=notes
 
 [Install]
 WantedBy=multi-user.target
