--- a/docker-lab/Vagrantfile
+++ b/docker-lab/Vagrantfile
@@ -1,8 +1,23 @@
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "centos/7"
-  config.vm.provision "shell", path: "provision.sh"
+    # configuração no nome (hostname) da vm da aplicação - app01
+    config.vm.hostname = "docker01"
 
-  config.vm.synced_folder ".", "/vagrant", type: "rsync", rsync__exclude: ".git/"
+    # configuração do SO/distro a ser utilizada
+    config.vm.box = "centos/7"
 
-end
+    # mapeamento de portas da aplicação que ira rodar em http
+    # config.vm.network "forwarded_port", guest: 8080, host: 8080
+
+    # configuração do ip local da vm
+    config.vm.network "private_network", ip: "192.168.56.5"
+
+    # mapeamento dos comandos bash para instalação configuração de relacao de confiança entre
+    config.vm.provision "shell", path: "provision.sh"
+
+    # configuração para habilitação do plugin vbox para integrar com o vagrant
+    # config.vbguest.auto_update = false
+    # config.vbguest.installer_options = { allow_kernel_upgrade: true }
+    config.vm.synced_folder ".", "/vagrant", type: "rsync", rsync__exclude: ".git/"
+  end
+
