--- a/ansible-lab/control-node/Vagrantfile
+++ b/ansible-lab/control-node/Vagrantfile
@@ -11,13 +11,13 @@ Vagrant.configure("2") do |config|
   config.vm.network "private_network", ip: "192.168.56.2"
 
   # mapeamento de pasta que será compartilhada via nfs
-  config.vm.synced_folder ".","/vagrant", type: "nfs"
+#   config.vm.synced_folder ".","/vagrant", type: "virtualbox"
 
   # mapeamento dos comandos bash para instalação do ansible no control node
   config.vm.provision "shell", path: "provision.sh"
 
   # configuração para habilitação do plugin vbox para integrar com o vagrant
-  # config.vbguest.auto_update = false
-  # config.vbguest.installer_options = { allow_kernel_upgrade: true }
+#   config.vbguest.auto_update = false
+#   config.vbguest.installer_options = { allow_kernel_upgrade: true }
   config.vm.synced_folder ".", "/vagrant", type: "rsync", rsync__exclude: ".git/"
 end
